# TAMU-LANL-PB-Mobility-Emmas-Stuff

install/dingo_control/share/dingo_control/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/dingo_pybullet/share/dingo_pybullet/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dingo_pybullet/share/dingo_pybullet/cmake/: dingo_pybulletConfig.cmake
install/dingo_pybullet/share/dingo_pybullet/launch/: launch_simulation.py  simulation.launch.py
install/rpbi_utils/share/rpbi_utils/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rpbi_utils/share/rpbi_utils/cmake/: rpbi_utilsConfig.cmake
src/dingo/: CMakeLists.txt  setup.py
src/dingo/launch/: dingo.launch.py  dingo_launch.py  dingo_simulator.launch  dingo_simulator.launch.py
src/dingo/scripts/: dingo_driver.py  run_robot.py
src/dingo_control/: CMakeLists.txt  package.xml  setup.py
src/dingo_control/dingo_control/: Command.py  Controller.py  Kinematics.py  State.py  SwingLegController.py
src/dingo_control/install/: local_setup.sh  setup.sh
src/dingo_control/install/dingo_control/share/dingo_control/: package.bash  package.zsh
src/dingo_control/log/: latest_build
src/dingo_control/msg/: JointSpace.msg  TaskSpace.msg
src/dingo_control/src/dingo_control/: Config.py  Controller.py  Gaits.py  Kinematics.py
src/dingo_control/src/dingo_control/dingo_utilities/: package.xml
src/dingo_description/: CMakeLists.txt  package.xml
src/dingo_description/Combined_Simulation_Documents/: CMakeLists.txt  package.xml
src/dingo_description/Combined_Simulation_Documents/config/: joint_names_conn_t2_newcoord.yaml
src/dingo_description/Combined_Simulation_Documents/dingo_description/config/: Open Notebook.onetoc2
src/dingo_description/Combined_Simulation_Documents/dingo_description/meshes/: arm_link1.STL  arm_link2.STL
src/dingo_description/Combined_Simulation_Documents/dingo_description/urdf/: Open Notebook.onetoc2  dingo_copy.urdf  urdf of dingo + arm not connected.urdf
src/dingo_description/Combined_Simulation_Documents/launch/: display.launch  gazebo.launch
src/dingo_description/Combined_Simulation_Documents/meshes/: arm_link1.STL  arm_link2.STL  arm_link3.STL  arm_link4.STL
src/dingo_description/Combined_Simulation_Documents/urdf/: conn_t2_newcoord.csv  conn_t2_newcoord.urdf
src/dingo_description/dingo_description_new/dingo_description/meshes/: arm_link2.STL  arm_link3.STL  arm_link4.STL
src/dingo_description/dingo_description_new1/dingo_description/: Open Notebook.onetoc2
src/dingo_description/dingo_description_new1/dingo_description/meshes/: FL_link1.dae
src/dingo_description/dingo_description_new1/dingo_description/urdf/: dingoplusbucket.urdf
src/dingo_description/dingo_description_new1/simplified_arm_bucket/: CMakeLists.txt  package.xml
src/dingo_description/dingo_description_new1/simplified_arm_bucket/launch/: display.launch  gazebo.launch
src/dingo_description/dingo_description_new1/simplified_arm_bucket/meshes/: arm_base_link.STL  arm_link1.STL
src/dingo_description/dingo_description_new1/simplified_arm_bucket/urdf/: simplified_arm_bucket.csv  simplified_arm_bucket.urdf
src/dingo_description/launch/: Open Notebook.onetoc2  dingo_state_publisher.launch
src/dingo_description/meshes1/: L_link2.dae  L_link3.dae  RL_link1.dae  RR_link1.dae  R_link2.dae  R_link3.dae  link4.dae
src/dingo_hardware_interfacing/dingo_input_interfacing/: CMakeLists.txt  Open Notebook.onetoc2  package.xml  setup.py
src/dingo_hardware_interfacing/dingo_input_interfacing/dingo_input_interfacing/: InputInterface.py
src/dingo_hardware_interfacing/dingo_input_interfacing/scripts/: Keyboard.py  Open Notebook.onetoc2
src/dingo_hardware_interfacing/dingo_input_interfacing/src/: Open Notebook.onetoc2
src/dingo_hardware_interfacing/dingo_peripheral_interfacing/: CMakeLists.txt  Open Notebook.onetoc2  setup.py
src/dingo_hardware_interfacing/dingo_peripheral_interfacing/launch/: LCD_service.launch  Open Notebook.onetoc2
src/dingo_hardware_interfacing/dingo_peripheral_interfacing/lib/: Open Notebook.onetoc2
src/dingo_hardware_interfacing/dingo_peripheral_interfacing/msg/: Open Notebook.onetoc2
src/dingo_hardware_interfacing/dingo_peripheral_interfacing/scripts/: Open Notebook.onetoc2  battery_voltage_checking.py  dingo_lcd_interfacing.py  run_dingo_display.sh
src/dingo_hardware_interfacing/dingo_peripheral_interfacing/src/: Open Notebook.onetoc2
src/dingo_hardware_interfacing/dingo_servo_interfacing/: CMakeLists.txt  Open Notebook.onetoc2  setup.py
src/dingo_hardware_interfacing/dingo_servo_interfacing/dingo_servo_interfacing/: HardwareInterface.py
src/dingo_hardware_interfacing/dingo_servo_interfacing/src/: Open Notebook.onetoc2
src/dingo_hardware_interfacing/dingo_servo_interfacing/src/dingo_servo_interfacing/: CalibrateServos.py  Open Notebook.onetoc2  ServoCalibrationDefinition.py
src/dingo_pybullet/: CMakeLists.txt  package.xml  scripts  setup.py
src/dingo_pybullet/dingo_pybullet/: scripts
src/dingo_pybullet/launch/: launch_simulation.py
src/dingo_pybullet/scripts/: launch_robot.py  pybullet_simulation.py
src/dualsense_interface/: CMakeLists.txt  setup.cfg  setup.py
src/install/dingo/share/dingo/: local_setup.sh  package.dsv  package.sh  package.xml
src/install/dingo/share/dingo/launch/: dingo_simulator.launch  dingo_simulator.launch.py
src/install/dingo_peripheral_interfacing/share/dingo_peripheral_interfacing/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/dingo_peripheral_interfacing/share/dingo_peripheral_interfacing/cmake/: dingo_peripheral_interfacing__rosidl_typesupport_cExport-noconfig.cmake  dingo_peripheral_interfacing__rosidl_typesupport_cExport.cmake  dingo_peripheral_interfacing__rosidl_typesupport_cppExport-noconfig.cmake  dingo_peripheral_interfacing__rosidl_typesupport_cppExport.cmake  export_dingo_peripheral_interfacing__rosidl_generator_cExport-noconfig.cmake  (+4 more)
(+249 files in other folders)
