<?xml version="1.0"?>
<package format="3">
  <name>dingo_input_interfacing</name>
  <version>0.0.0</version>
  <description>The dingo_input_interfacing package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="alex@todo.todo">alex</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

    <!-- Build dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <depend>numpy</depend>
  <depend>joy</depend>
  <depend>sensor_msgs</depend>
  <depend>os</depend>
  <depend>sys</depend>
  <depend>signal</depend>
  <depend>pynput</depend>
  <exec_depend>dingo_control</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
