<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dingo_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ehoaglin@todo.todo">ehoaglin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclpy</depend>

  <exec_depend>dingo_servo_interfacing</exec_depend>
  <exec_depend>dingo_peripheral_interfacing_msg</exec_depend>
  <exec_depend>dingo_peripheral_interfacing</exec_depend>
  <exec_depend>dingo_hardware_config</exec_depend>
  <exec_depend>dingo_control_msg</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

