<?xml version="1.0"?>
<package format="3">
  <name>dingo_pybullet</name>
  <version>1.0.0</version>
  <description>The notspot_gazebo package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dingo_control_msgs</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dingo_control_msgs</exec_depend>
  <build_depend>dingo_description</build_depend>
  <test_depend>pytest</test_depend>
  
  <export>                               
    <build_type>ament_cmake</build_type> 
  </export> 
</package>