<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dingo_peripheral_interfacing</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ehoaglin@todo.todo">ehoaglin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <depend>numpy</depend>
  <depend>pyserial</depend>
  <exec_depend>spidev</exec_depend>
  <depend>logging</depend>
  <depend>os</depend>

  <depend>socket</depend>
  <depend>time</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
